# goh-mod-manager

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  GoH Mod Manager.spec  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml  zensical.toml
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: build.yml  ci.yml  pages.yml  release.yml
docs/: architecture.md  index.md  packaging.md  translations.md  ui-flow.md
docs/api/: application.md  core.md  services.md
goh_mod_manager/: __main__.py
goh_mod_manager/controller/: mod_manager_controller.py
goh_mod_manager/controllers/: mod_manager_controller.py
goh_mod_manager/core/: __init__.py  mod.py  mod_manager_model.py
goh_mod_manager/i18n/: README.md  __init__.py  goh_mod_manager_en.ts  translator.py
goh_mod_manager/infrastructure/: __init__.py  async_worker.py  config_manager.py  mod_info_parser.py  mod_manager_logger.py  options_set_parser.py  steam_utils.py
goh_mod_manager/model/: mod.py  mod_manager_model.py
goh_mod_manager/models/: mod.py  mod_manager_model.py
goh_mod_manager/presentation/: __init__.py
goh_mod_manager/res/: resources.py  resources.qrc
goh_mod_manager/resources/: resources.qrc  resources_rc.py
goh_mod_manager/services/: __init__.py  active_mods_service.py  dependencies_service.py  font_service.py  mod_files_service.py  mod_import_service.py  mods_catalog_service.py  presets_service.py  share_code_service.py  system_actions_service.py
goh_mod_manager/util/: config_manager.py  mod_info_parser.py  mod_manager_logger.py  options_set_parser.py  steam_utils.py
goh_mod_manager/utils/: config_manager.py  mod_info_parser.py  mod_manager_logger.py  options_set_parser.py
goh_mod_manager/view/: mod_manager_view.py
goh_mod_manager/views/: mod_manager_view.py
scripts/: build_app.py  build_translations.py  validate_translations.py
scripts/qt/: compile_translations.ps1  compile_ui.ps1  update_translations.ps1
src/: main.py  utils.py
tests/: conftest.py  options.set  test_active_mods_service.py  test_active_mods_service_profile_errors.py  test_app_paths.py  test_application_debug_report_service.py  test_application_load_order_use_case.py  test_application_query_service.py  test_application_settings_service.py  test_application_share_code_service.py  test_async_viewmodels.py  test_circular.py  test_cli_main.py  test_config_service.py  test_dependencies_service.py  test_file_utils.py  test_gem_parser.py  test_i18n_registry.py  test_load_order_controller.py  test_manager.py  test_markup_parser.py  test_mod_files_service.py  test_mod_import_service.py  test_mod_import_worker.py  test_mod_info.py  test_mods_catalog_service.py  test_mods_catalogue_service.py  test_options_set.py  test_options_set_parser.py  test_preset_service.py  test_presets_service.py  test_selection_controller.py  test_share_code_service.py  test_steam_utils.py  test_system_actions.py
www/: index.html
(+153 files in other folders)
