[project]
name = "goh-mod-manager"
dynamic = ["version"]
description = "A Mod Manager for Call to Arms: Gates of Hell"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.10.1",
    "loguru>=0.7.3",
    "packaging>=25.0",
    "requests>=2.32.5",
    "py7zr>=1.1.0",
    "rarfile>=4.2",
    "vdf>=3.4",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
    "nuitka>=2.8.9",
    "pyinstaller>=6.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "goh_mod_manager/__init__.py"

[tool.ruff]
target-version = "py312"
line-length = 88

exclude = [
    "goh_mod_manager/presentation/view/ui",
    ".venv",
]
