[project]
name = "goh-mod-manager"
dynamic = ["version"]
description = "A Mod Manager for Call to Arms: Gates of Hell"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "py7zr>=1.1.0",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.11.0",
    "qtawesome>=1.4.1",
    "rarfile>=4.2",
    "vdf>=3.4",
]

[dependency-groups]
dev = [
    "nuitka>=4.0.7",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = ".app-version"
pattern = "(?P<version>.+)"
