[project]
name = "goh-mod-manager"
dynamic = ["version"]
description = "A Mod Manager for Call to Arms: Gates of Hell"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "py7zr>=1.1.0",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.11.0",
    "qtawesome>=1.4.1",
    "rarfile>=4.2",
    "vdf>=3.4",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "deptry>=0.23.1",
    "nuitka>=4.0.7",
    "pre-commit>=4.3.0",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
addopts = "--cov=src --cov-report=term-missing"

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src", "tests", "scripts"]
exclude = [
  "**/__pycache__",
  ".venv",
  "build",
  "dist",
  "legacy",
  "site",
]
reportMissingTypeStubs = false

[tool.deptry]
exclude = [
  ".venv",
  "build",
  "dist",
  "legacy",
  "tests",
  "site",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
path = ".app-version"
pattern = "(?P<version>.+)"
